# LPG-miniworld-gymnasium

./: LICENSE  README.md  play.py  pyproject.toml
lpg_envs/: __init__.py
lpg_envs/configs/: __init__.py  chain_configs.py  grid_world_configs.py  map_loader.py
lpg_envs/envs/: __init__.py  delayed_chain_mdp.py  grid_world_base.py  random_grid_world.py  tabular_grid_world.py
lpg_envs/maps/: random_small.txt  tabular_long_dense.txt
maps/: random_small_sparse.txt  tabular_dense.txt  tabular_longer_horizon.txt
tests/: conftest.py  test_delayed_chain_mdp.py  test_env_checker.py  test_random_grid_world.py  test_registration.py  test_tabular_grid_world.py
