[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lpg-envs"
version = "0.1.0"
description = "LPG training environments (Tabular Grid World, Random Grid World, Delayed Chain MDP) as Gymnasium custom environments"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "gymnasium>=1.0.0",
    "numpy>=1.24.0",
    "pygame>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
demo = [
    "Pillow>=9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["lpg_envs"]

[tool.pytest.ini_options]
testpaths = ["tests"]
